espocrm.yaml
# espocrm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: espocrm
  template:
    metadata:
      labels:
        app: espocrm
    spec:
      containers:
        - name: espocrm
          image: espocrm/espocrm:latest
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            exec:
              command: ["bin/command", "app-check"]
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 20
          volumeMounts: &espo_mounts
            - name: espocrm-data
              mountPath: /var/www/html/data
            - name: espocrm-custom
              mountPath: /var/www/html/custom
            - name: espocrm-custom-client
              mountPath: /var/www/html/client/custom

        - name: espocrm-daemon
          image: espocrm/espocrm:latest
          command: ["docker-daemon.sh"]
          readinessProbe:
            exec:
              command: ["bin/command", "app-check"]
            initialDelaySeconds: 20
            periodSeconds: 180
            timeoutSeconds: 20
          volumeMounts: *espo_mounts

        - name: espocrm-websocket
          image: espocrm/espocrm:latest
          command: ["docker-websocket.sh"]
          ports:
            - name: websocket
              containerPort: 8080
          readinessProbe:
            exec:
              command: ["bin/command", "app-check"]
            initialDelaySeconds: 20
            periodSeconds: 180
            timeoutSeconds: 20
          volumeMounts: *espo_mounts

      volumes:
        - name: espocrm-data
          persistentVolumeClaim:
            claimName: espocrm-data-pvc
        - name: espocrm-custom
          persistentVolumeClaim:
            claimName: espocrm-custom-pvc
        - name: espocrm-custom-client
          persistentVolumeClaim:
            claimName: espocrm-custom-client-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: espo-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: websocket
      port: 8080
      targetPort: 8080
  selector:
    app: espocrm
