espocrm-ingress.yaml
# espocrm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espocrm-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: espo-service
            port:
              number: 80
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: espo-service
            port:
              number: 8080
